k8s/deployment.yaml
# k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-engine-api
  namespace: data-tools
  labels:
    app: test-engine-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-engine-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: test-engine-api
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: fastapi-engine
          # Using local-nexus registry mapped out of docker-compose
          image: localhost:5000/shift-left-test-engine:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
          
          # Environment Variables mapped from a Kubernetes Secret
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1000m"
              memory: "2Gi"

          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
